--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,18 @@
             <a href="/" title="法考笔记 · Enn-Yaa">My cool site</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/civil/"> 民法 </a><a class="menu-item" href="/criminal/"> 刑法 </a><a class="menu-item" href="/admin/"> 行政法 </a><a class="menu-item" href="/civil-procedure/"> 民诉法 </a><a class="menu-item" href="/criminal-procedure/"> 刑诉法 </a><a class="menu-item" href="/commercial/"> 商经知 </a><a class="menu-item" href="/theory/"> 理论法 </a><a class="menu-item" href="/international/"> 三国法 </a><a class="menu-item" href="/others/"> 其他 </a><a class="menu-item" href="/pdfs/"> 资料库 </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+            <div class="menu-inner"><a class="menu-item" href="/civil/"> 民法 </a><a class="menu-item" href="/criminal/"> 刑法 </a><a class="menu-item" href="/admin/"> 行政法 </a><a class="menu-item" href="/civil-procedure/"> 民诉法 </a><a class="menu-item" href="/criminal-procedure/"> 刑诉法 </a><a class="menu-item" href="/commercial/"> 商经知 </a><a class="menu-item" href="/theory/"> 理论法 </a><a class="menu-item" href="/international/"> 三国法 </a><a class="menu-item" href="/others/"> 其他 </a><a class="menu-item" href="/pdfs/"> 资料库 </a><a class="menu-item active" href="/"> 首页 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+                        <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
+                        <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
+                            <i class="fas fa-search fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a href="javascript:void(0);" class="search-button search-clear" id="search-clear-desktop" title="Clear">
+                            <i class="fas fa-times-circle fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <span class="search-button search-loading" id="search-loading-desktop">
+                            <i class="fas fa-spinner fa-fw fa-spin" aria-hidden="true"></i>
+                        </span>
+                    </span><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
                 </a></div>
         </div>
@@ -66,11 +77,32 @@
                 <span></span><span></span><span></span>
             </div>
         </div>
-        <div class="menu" id="menu-mobile"><a class="menu-item" href="/civil/" title="">民法</a><a class="menu-item" href="/criminal/" title="">刑法</a><a class="menu-item" href="/admin/" title="">行政法</a><a class="menu-item" href="/civil-procedure/" title="">民诉法</a><a class="menu-item" href="/criminal-procedure/" title="">刑诉法</a><a class="menu-item" href="/commercial/" title="">商经知</a><a class="menu-item" href="/theory/" title="">理论法</a><a class="menu-item" href="/international/" title="">三国法</a><a class="menu-item" href="/others/" title="">其他</a><a class="menu-item" href="/pdfs/" title="">资料库</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+        <div class="menu" id="menu-mobile"><div class="search-wrapper">
+                    <div class="search mobile" id="search-mobile">
+                        <input type="text" placeholder="Search titles or contents..." id="search-input-mobile">
+                        <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-mobile" title="Search">
+                            <i class="fas fa-search fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a href="javascript:void(0);" class="search-button search-clear" id="search-clear-mobile" title="Clear">
+                            <i class="fas fa-times-circle fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <span class="search-button search-loading" id="search-loading-mobile">
+                            <i class="fas fa-spinner fa-fw fa-spin" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
+                        Cancel
+                    </a>
+                </div><a class="menu-item" href="/civil/" title="">民法</a><a class="menu-item" href="/criminal/" title="">刑法</a><a class="menu-item" href="/admin/" title="">行政法</a><a class="menu-item" href="/civil-procedure/" title="">民诉法</a><a class="menu-item" href="/criminal-procedure/" title="">刑诉法</a><a class="menu-item" href="/commercial/" title="">商经知</a><a class="menu-item" href="/theory/" title="">理论法</a><a class="menu-item" href="/international/" title="">三国法</a><a class="menu-item" href="/others/" title="">其他</a><a class="menu-item" href="/pdfs/" title="">资料库</a><a class="menu-item" href="/" title="">首页</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a></div>
     </div>
-</header><main class="main">
+</header><div class="search-dropdown desktop">
+        <div id="search-dropdown-desktop"></div>
+    </div>
+    <div class="search-dropdown mobile">
+        <div id="search-dropdown-mobile"></div>
+    </div><main class="main">
                 <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"></div></div>
 <div class="single">
                 <div class="content" id="content"><p>欢迎来到 <strong>法考笔记 · Enn-Yaa</strong><br>
@@ -79,7 +111,8 @@
             </div></div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.152.2">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.3.1-DEV"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
-                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2022 - 2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">xxxx</a></span></div>
+                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2022 - 2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">xxxx</a></span>&nbsp;|&nbsp;<span class="license">CC BY-NC-SA 4.0</span><span class="icp-splitter">&nbsp;|&nbsp;</span><br class="icp-br"/>
+                    <span class="icp">©2025 Enn-Yaa</span></div>
         </div>
     </footer></div>
 
@@ -91,5 +124,5 @@
         <div id="fixed-buttons-hidden"><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="fas fa-comment fa-fw" aria-hidden="true"></i>
             </a>
-        </div><script src="/lib/lazysizes/lazysizes.min.js"></script><script src="/lib/clipboard/clipboard.min.js"></script><script src="/lib/sharer/sharer.min.js"></script><script src="/lib/typeit/index.umd.js"></script><script>window.config={"data":{"id-1":"This is my cool site"},"typeit":{"cursorChar":"|","cursorSpeed":1000,"data":{"id-1":["id-1"]},"duration":-1,"speed":100}};</script><script src="/js/theme.min.js"></script></body>
+        </div><script src="/lib/autocomplete/autocomplete.min.js"></script><script src="/lib/lunr/lunr.min.js"></script><script src="/lib/lazysizes/lazysizes.min.js"></script><script src="/lib/clipboard/clipboard.min.js"></script><script src="/lib/sharer/sharer.min.js"></script><script src="/lib/typeit/index.umd.js"></script><script>window.config={"data":{"id-1":"This is my cool site"},"search":{"highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30},"typeit":{"cursorChar":"|","cursorSpeed":1000,"data":{"id-1":["id-1"]},"duration":-1,"speed":100}};</script><script src="/js/theme.min.js"></script></body>
 </html>
