--- a/public/404.html
+++ b/public/404.html
@@ -4,11 +4,11 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
-<title>404 Page not found | 法考笔记 · Enn-Yaa</title>
+<meta name="robots" content="noindex, nofollow">
+<title>404 Page not found | 法考笔记 · xuufaa</title>
 <meta name="keywords" content="">
 <meta name="description" content="专注于法考笔记、真题解析、法律思维图谱整理">
-<meta name="author" content="map[email:vxxo@outlook.com name:Enn-Yaa]">
+<meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
@@ -70,22 +70,13 @@
         document.querySelector("html").dataset.theme = 'light';
     }
 
-</script><meta property="og:url" content="http://localhost:1313/404.html">
-  <meta property="og:site_name" content="法考笔记 · Enn-Yaa">
-  <meta property="og:title" content="404 Page not found">
-  <meta property="og:description" content="专注于法考笔记、真题解析、法律思维图谱整理">
-  <meta property="og:locale" content="zh-cn">
-  <meta property="og:type" content="website">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="专注于法考笔记、真题解析、法律思维图谱整理">
-
+</script>
 </head>
 <body class="list" id="top">
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="法考笔记 · Enn-Yaa (Alt + H)">法考笔记 · Enn-Yaa</a>
+            <a href="http://localhost:1313/" accesskey="h" title="法考笔记 · xuufaa (Alt + H)">法考笔记 · xuufaa</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -168,7 +159,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">法考笔记 · Enn-Yaa</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/">法考笔记 · xuufaa</a></span> · 
         © 2022–2025 · CC BY-NC-SA 4.0 · 法考笔记 · xuufaa · 
 
     <span>
