--- a/public/civil/民法示例/index.html
+++ b/public/civil/民法示例/index.html
@@ -151,6 +151,11 @@
                     <span>资料库</span>
                 </a>
             </li>
+            <li>
+                <a href="http://localhost:1313/others/" title="其他">
+                    <span>其他</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
